infra/ansible/ingress-echo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    external-dns.alpha.kubernetes.io/hostname: echo.dev.endavarangers.com
spec:
  ingressClassName: alb
  rules:
  - host: echo.dev.endavarangers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
