infra/ansible/ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-alb
  namespace: tunefy-dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    external-dns.alpha.kubernetes.io/hostname: app.dev.endavarangers.com
spec:
  rules:
  - host: app.dev.endavarangers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
